rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__count_by_retail_week.snap
---
source: cubesqlplanner/src/tests/integration/calendar.rs
expression: result
---
custom_calendar__retail_date_week | calendar_orders__count
----------------------------------+-----------------------
2025-02-02                        | 1                     
2025-02-09                        | 1                     
2025-02-16                        | 1                     
2025-02-23                        | 1                     
2025-03-09                        | 1                     
2025-03-16                        | 1                     
2025-03-30                        | 1
