rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__nested_interval_shifts_fall_through_to_plain_arithmetic.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/calendar.rs
expression: result
---
custom_calendar__retail_date_year | calendar_orders__count | calendar_orders__count_shifted_calendar_m | calendar_orders__count_shifted_calendar_y | calendar_orders__count_shifted_m_then_y
----------------------------------+------------------------+-------------------------------------------+-------------------------------------------+----------------------------------------
2025-02-02                        | 37                     | 38                                        | 39                                        | 40
