rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__non_pk_year_granularity.snap
---
source: cubesqlplanner/src/tests/integration/calendar.rs
expression: result
---
custom_calendar__retail_date_year
---------------------------------
2025-02-02
