rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__pk_time_dimension_with_date_range.snap
---
source: cubesqlplanner/src/tests/integration/calendar.rs
expression: result
---
custom_calendar__date_val
-------------------------
2025-02-02 00:00:00      
2025-02-03 00:00:00      
2025-02-04 00:00:00      
2025-02-05 00:00:00      
2025-02-06 00:00:00
