rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__pk_year_granularity.snap
---
source: cubesqlplanner/src/tests/integration/calendar.rs
expression: result
---
custom_calendar__date_val_year
------------------------------
2025-02-02
