rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__shifted_by_retail_month.snap
---
source: cubesqlplanner/src/tests/integration/calendar.rs
expression: result
---
custom_calendar__retail_date_month | calendar_orders__count | calendar_orders__count_shifted_calendar_m
-----------------------------------+------------------------+------------------------------------------
2025-02-01 00:00:00                | 3                      | 3                                        
2025-03-01 00:00:00                | 3                      | 4                                        
2025-04-01 00:00:00                | 3                      | 2                                        
2025-05-01 00:00:00                | 3                      | 2                                        
2025-06-01 00:00:00                | 4                      | 3                                        
2025-07-01 00:00:00                | 4                      | 4                                        
2025-08-01 00:00:00                | 4                      | 4                                        
2025-09-01 00:00:00                | 4                      | 3                                        
2025-10-01 00:00:00                | 3                      | 4                                        
2025-11-01 00:00:00                | 3                      | 3                                        
2025-12-01 00:00:00                | 3                      | 3                                        
2026-01-01 00:00:00                | NULL                   | 3
