rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__calendar__shifted_by_retail_year.snap
---
source: cubesqlplanner/src/tests/integration/calendar.rs
expression: result
---
custom_calendar__retail_date_year | calendar_orders__count | calendar_orders__count_shifted_calendar_y
----------------------------------+------------------------+------------------------------------------
2025-02-02                        | 37                     | 39
